z4/iptables-save
# Generated by iptables-save v1.6.1 on Mon Feb 21 02:35:36 2022
*nat
:PREROUTING ACCEPT [15:964]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [2:120]
:POSTROUTING ACCEPT [3:180]
-A POSTROUTING -s 192.168.0.0/24 -o enp0s10 -j MASQUERADE
-A POSTROUTING -s 172.20.0.0/24 -o enp0s10 -j MASQUERADE
COMMIT
# Completed on Mon Feb 21 02:35:36 2022
# Generated by iptables-save v1.6.1 on Mon Feb 21 02:35:36 2022
*filter
:INPUT DROP [7:316]
:FORWARD DROP [6:504]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i enp0s3 -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -i enp0s10 -p tcp -m multiport --dports 22,80,443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i enp0s10 -p udp -m multiport --dports 53,123 -j ACCEPT
-A INPUT -i enp0s10 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -i enp0s8 -j ACCEPT
-A INPUT -i enp0s9 -j ACCEPT
-A INPUT -i enp0s8 -p tcp -m multiport --dports 138,139,445 -j ACCEPT
-A INPUT -i enp0s8 -p udp -m multiport --dports 137,445 -j ACCEPT
-A INPUT -i enp0s9 -p tcp -m multiport --dports 138,139,445 -j ACCEPT
-A INPUT -i enp0s9 -p udp -m multiport --dports 137,445 -j ACCEPT
-A FORWARD -m state --state INVALID -j DROP
-A FORWARD -s 192.168.0.0/24 -d 172.20.0.0/24 -i enp0s9 -o enp0s8 -j ACCEPT
-A FORWARD -s 172.20.0.0/24 -d 192.168.0.0/24 -i enp0s8 -o enp0s9 -j ACCEPT
-A FORWARD -i enp0s9 -o enp0s10 -m iprange --src-range 192.168.0.31-192.168.0.44 -j ACCEPT
-A FORWARD -i enp0s10 -o enp0s9 -m iprange --dst-range 192.168.0.31-192.168.0.44 -j ACCEPT
-A FORWARD -i enp0s8 -o enp0s10 -m iprange --src-range 172.20.0.101-172.20.0.200 -j ACCEPT
-A FORWARD -i enp0s10 -o enp0s8 -m iprange --dst-range 172.20.0.101-172.20.0.200 -j ACCEPT
-A FORWARD -i enp0s10 -o enp0s8 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i enp0s10 -o enp0s9 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o enp0s3 -j ACCEPT
-A OUTPUT -o enp0s10 -p tcp -m tcp --sport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o enp0s10 -p tcp -m tcp --sport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o enp0s10 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -o enp0s10 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -o enp0s10 -p udp -m udp --sport 53 -j ACCEPT
-A OUTPUT -o enp0s10 -p udp -m udp --sport 123 -j ACCEPT
-A OUTPUT -o enp0s8 -j ACCEPT
-A OUTPUT -o enp0s9 -j ACCEPT
-A OUTPUT -o enp0s8 -p tcp -m multiport --sports 138,139,445 -j ACCEPT
-A OUTPUT -o enp0s8 -p udp -m multiport --sports 137,445 -j ACCEPT
-A OUTPUT -o enp0s9 -p tcp -m multiport --sports 138,139,445 -j ACCEPT
-A OUTPUT -o enp0s9 -p udp -m multiport --sports 137,445 -j ACCEPT
COMMIT
# Completed on Mon Feb 21 02:35:36 2022
